# outil_DLE

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml
_bmad-output/: README.md  project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-05-19h30.md
_bmad-output/implementation-artifacts/: 1-1-initialize-the-split-stack-foundation.md  1-2-establish-site-aware-roles-and-access-policy.md  1-3-implement-shared-workstation-identification-and-signature-authority-guardrails.md  2-1-create-the-mmr-and-draft-version-lifecycle-baseline.md  2-2-define-ordered-template-steps-and-step-level-guidance.md  3-1-open-a-batch-and-navigate-its-step-by-step-execution-flow.md  4-1-record-attributed-audit-events-for-regulated-batch-actions.md  4-2-correct-previously-entered-batch-data-with-required-reason-for-change.md  5-1-provide-a-dedicated-review-summary-for-batch-completeness.md  5-2-perform-pre-qa-review-and-confirm-readiness-for-quality-handoff.md  6-1-compose-the-required-dossier-structure-from-batch-context.md  6-2-generate-repeated-in-process-and-box-level-controls-for-the-batch.md  django_models_v1.py  mmr-version-example.json  mmr-version-schema-minimal.json  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-10.md  prd-validation-report.md  prd.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/research/: competitive-patterns-2026-03-06.md  transcript-to-product-decisions-2026-03-07.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_research/postgresql/: audit_trail_analysis.sql
_research/typescript/: audit-trail-analysis.md
backend/: README.md
backend/apps/: __init__.py
backend/apps/audit/: admin.py  models.py  selectors.py  services.py
backend/apps/audit/migrations/: 0001_initial.py  0002_alter_auditevent_actor_alter_auditevent_site.py  0003_add_batch_event_types_and_target_linkage.py  0003_alter_auditevent_event_type.py  0004_add_pre_qa_review_event_types.py  0004_add_step_audit_event_types.py  0004_add_target_check_constraint.py  (+14 more)
backend/apps/authz/: admin.py  apps.py  models.py
backend/apps/batches/: admin.py  apps.py  models.py
backend/apps/exports/: admin.py  apps.py  models.py
backend/apps/mmr/: admin.py  apps.py  models.py
backend/apps/reviews/: admin.py  apps.py  models.py
backend/apps/sites/: admin.py  apps.py  models.py
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/shared/: __init__.py  http.py
backend/shared/api/: __init__.py  exceptions.py  urls.py  views.py
backend/shared/permissions/: site_roles.py
backend/tests/: test_health_api.py  test_settings_base.py
compose/: compose.dev.yml  compose.prod.yml  compose.uat.yml
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md
docs/decisions/: architecture-decisions.md
docs/implementation/: README.md  audit-event-taxonomy.md  authorization-policy.md  code-quality-baseline.md  custom-user-model-cutover.md  django_models_v1.py  mmr-version-example.json  workstation-auth.md
frontend/: README.md  components.json  dependency-cruiser.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  smoke.test.ts  smoke.test.tsx
frontend/src/app/: router.tsx  styles.css
frontend/src/test/: setup.ts
tools/: check_backend_architecture.py
(+121 files in other folders)
